tests/NormalTests/paczka1/small_fuzzy/40638960.err
Error in line 4: DZLkSRGL5 S578 5,50
Error in line 9: S578 S825 68,8
Error in line 1: DZLkSRGL5 S578 1,2
